--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,14 +1,23 @@
 version: 0.2
 
 phases:
+  install:
+    runtime-versions:
+      nodejs: 18
+    commands:
+      - echo Installing dependencies...
+      - npm install
+
   build:
     commands:
       - echo Build started on `date`
-      - npm install
+
   post_build:
     commands:
-      - mkdir build-output
+      - echo Creating build output directory...
+      - mkdir -p build-output
       - cp -R ./ build-output
+
 artifacts:
   files:
     - build-output/**/*
