--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,22 +2,10 @@ version: 0.2
 
 phases:
   install:
-    runtime-versions:
-      nodejs: 18
     commands:
-      - echo Installing dependencies...
+      - echo Installing dependencies
       - npm install
-
-  build:
-    commands:
-      - echo Build started on `date`
-
-  post_build:
-    commands:
-      - echo Creating build output directory...
-      - mkdir -p build-output
-      - cp -R ./ build-output
 
 artifacts:
   files:
-    - build-output/**/*
+    - '**/*'
